<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>post-publication</artifactId>
        <groupId>eu.europeana.api</groupId>
        <version>0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>post-publication-debias</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>${httpclient5.version}</version>
        </dependency>

<!--        annotation-definitions is includen in utils-->
        <dependency>
            <groupId>eu.europeana.annotation</groupId>
            <artifactId>annotation-utils</artifactId>
            <version>${annotation.api.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>eu.europeana.api.commons</groupId>
            <artifactId>commons-error</artifactId>
            <version>${api.commons.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>eu.europeana.corelib</groupId>
            <artifactId>corelib-definitions</artifactId>
            <version>${corelib.version}</version>
        </dependency>

        <!--        testing-->
        <dependency>
            <groupId>eu.europeana.corelib</groupId>
            <artifactId>corelib-storage</artifactId>
            <version>${corelib.version}</version>
        </dependency>

    </dependencies>

</project>